# estrutura_projeto

./: .gitignore  404.html  README.md  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml
.github/workflow/: ci.yml
app/: main.py
app/pipeline/: extract.py  load.py  transform.py
data/output/: output.xlsx
docs/: index.md
search/: search_index.json
tests/: test_pipeline.py
