[tool.poetry]
name = "estrutura-projeto"
version = "0.1.0"
description = ""
authors = ["Mariana Almeida <marianath.almeida@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.3"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.4"
pygments = "^2.17.1"
mkdocs-material = "^9.4.10"
pymdown-extensions = "^10.4"
mkdocs-bootstrap386 = "^0.0.2"
openpyxl = "^3.1.2"
pytest = "^7.4.3"
isort = "^5.12.0"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.6.1"
taskipy = "^1.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python app/main.py"